crates/nash-can/tests/snapshots/kind_predicates__bad_big_field_is_a_representation_error.snap
---
source: crates/nash-can/tests/kind_predicates.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Bad 'a = Bad (list 'a)\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field 1 of Big constructor `Bad` in `Bad`:
   ╭─[src/Main.nash:6:20]
 5 │ 
 6 │ type Bad 'a = Bad (list 'a)
   ·                    ───────
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
