crates/nash-can/tests/snapshots/kind_predicates__imported@imported_apply_context_rejects_a_term_list_element.snap
---
source: crates/nash-can/tests/kind_predicates.rs
description: "module Types exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype Box 'a = Box 'a\ntype wrap 'f 'a = Wrap ('f 'a)\ntype option 'a = None | Some 'a\ntype alias count = int\n\nmodule Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Types exposing (..)\nf : wrap list (option int) -> unit\nf x = ()\n"
---
nash::names::representation_mismatch

  × This position requires `Storable` in the annotation for `f`:
   ╭─[src/Main.nash:5:16]
 4 │ import Types exposing (..)
 5 │ f : wrap list (option int) -> unit
   ·                ──────────
 6 │ f x = ()
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
