crates/nash-can/tests/snapshots/kind_predicates__imported@imported_datatype_context_rejects_a_little_box_argument.snap
---
source: crates/nash-can/tests/kind_predicates.rs
description: "module Types exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype Box 'a = Box 'a\ntype wrap 'f 'a = Wrap ('f 'a)\ntype option 'a = None | Some 'a\ntype alias count = int\n\nmodule Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Types exposing (..)\nf : Box int -> unit\nf x = ()\n"
---
nash::names::representation_mismatch

  × This position requires `Big` in the annotation for `f`:
   ╭─[src/Main.nash:5:9]
 4 │ import Types exposing (..)
 5 │ f : Box int -> unit
   ·         ───
 6 │ f x = ()
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
